--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Aerial-Laptop/Anti-Airborne#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
