--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-rate-limit": "^6.4.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "markdown-it": "^12.0.6",
